add changelog 3.13, QuestionsServlet and QuestionsController
